Issue457: Fractional Scaling on Windows (#524)
* Add text example + modify app to show a larger screen centered on monitor

* Extend text samples

* Potential fix for plain text (no undelines, no tabs, ...)

- Add SwingUtils with methods for leveraging the FPAPI
- Modify DefaultTokenPainter and VisibleWhitespaceTokenPainter to call SwingUtils

* Potential fix for tabs

- set tabsize 4 in DemoRootPane (to match text sample)
- fix bug in SwingUtils.charWidth(...)
- modify SyntaxView to use floats for calculating tab stops:
  - SyntaxView.tabSize is now float
  - SyntaxView.calculateLongestLine() now calls SwingUtils.charWidth()
  - SyntaxView.nextTabStop() adapted for float tabSize

* Modify some more calls to use the FPAPI when calculating widths, heights and positions.

Modify concerned classes and methods to use Rectangle2D and float variables instead of Rectangle and integers:
- DefaultTokenPainter.paintBackground()
- RSyntaxUtilities.getLineWidthUpTo()
- SyntaxView: tabBase, clipStart, clipEnd, lineToRect(), damageLineRange(), modelToView(), paint()
- Token.listOffsetToView()
- TokenImpl.getWidthUpTo() now calls SwingUtils.charsWidth()
- TokenImpl.listOffsetToView()
- WrappedSyntaxView.modelToView()

* Ooops, forgot one place: TokenImpl.getListOffset() now calls SwingUtils.charsWidth()

* Add offset for tabs to avoid losing tabs that occur on the same pixel as the preceding character ends

* Ooops, fix signature of SwingUtils.setHeight()

* Modify ConfigurableCaret to use Rectangle2D and floats/doubles, primarily to avoid double lines on thick vertical line style

NOTE: ConfigurableCaret.damage() still runs on integers as a result of superclass implementation. No negative effects have been observed.

* Refactor; adjust argument type of some methods in SwingUtils (double instead of float)

* Add RSyntaxTextArea.onGraphicsChange() to let owner refresh font metrics when graphic properties change

* Update DemoRootPane with 